fixed error on mobile view

--- a/Inlämningsuppgift1/Stylesheet.css
+++ b/Inlämningsuppgift1/Stylesheet.css
@@ -238,19 +238,19 @@
 
 #checkin {
   font-size: 40px;
-  margin-left: 30rem;
+  margin-left: 23rem;
 }
 
 #checkinInfo {
   font-size: 20px;
-  margin-left: 30rem;
+  margin-left: 23rem;
   margin-top: -2rem;
 }
 
 #bookingCode {
   font-size: 20px;
   color: grey;
-  margin-left: 30rem;
+  margin-left: 23rem;
   margin-bottom: -4rem;
   margin-top: 5rem;
 }
@@ -258,21 +258,21 @@
 #lastname {
   font-size: 20px;
   color: grey;
-  margin-left: 30rem;
+  margin-left: 23rem;
   margin-bottom: -4rem;
   margin-top: 5rem;
 }
 
 hr {
   border-top: 1px solid black;
-  margin-left: 30rem;
+  margin-left: 23rem;
   margin-right: 55rem;
   margin-top: 5rem;
 }
 
 #checkinButton {
   float: left;
-  margin-left: 30rem;
+  margin-left: 23rem;
 }
 
 #checkTravelDocs {
@@ -290,7 +290,7 @@ hr {
   width: auto;
   height: 200px;
   margin-top: 13rem;
-  margin-left: -14rem;
+  margin-left: -6rem;
   margin-bottom: 5rem;
   border-radius: 10%;
 }
@@ -358,7 +358,7 @@ hr {
 
   #beach {
     max-width: 100%;
-    height: 600px;
+    height: 400px;
     position: relative;
     z-index: 0;
   }
@@ -368,8 +368,8 @@ hr {
     display: inline;
     position: absolute;
     z-index: 0;
-    top: 10rem;
-    left: 1rem;
+    top: 2rem;
+    left: 0.5rem;
   }
 
   #businessClassPic {
